--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=dev_processes;Username=postgres;Password=password"
-  }
+    "DefaultConnection": "Host=localhost;Port=5432;Database=dev_processes;Username=postgres;Password=123"
+  },
+  "UploadsLocation": "Uploads"
 }
