Admins, students registration

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=dev_processes;Username=postgres;Password=password"
   },
+  "DefaultUsersConfig": {
+    "SuperAdminFirstName": "SuperAdmin",
+    "SuperAdminLastName": "SuperAdmin",
+    "SuperAdminEmail": "super_admin@example.com",
+    "SuperAdminPassword": "Super_admin_pass+7%"
+  },
   "UploadsLocation": "Uploads"
 }
